--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
       <!--Our advantages-->
       <section class="advantages-section">
         <div class="container">
-          <h2 class="hero-section-title" hidden>Наши преимущества</h2>
+          <h2 class="visually-hidden" >Наши преимущества</h2>
           <ul class="advantages-list list">
             <li class="advantages-list-item">
               <div></div>
